@@ -1,3 +1,8 @@
+2011-07-03 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSLayoutManager.m (-drawGlyphsForGlyphRange:atPoint:,
+	-drawUnderlineForGlyphRange:...:): Add support for for link attributes.
+
 2011-07-03 Riccardo Mottola <rm@gnu.org>
 
 	* Source/NSSliderCell.m:
@@ -73,7 +78,6 @@
 	In particular, the action now deletes the newline character when
 	the insertion point is at the end of a line.
 
->>>>>>> .r33429
 2011-06-22 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/AppKit/NSPrintPanel.h: Add missing APPKIT_EXPORT for new
